REMOVE SCORING UI, keep back-end for now, remove requirement to have an amount on a score. means some scores will have empty amounts. Add ability to flag a goal as belonging to the SDP.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -89,6 +89,12 @@
 .clear
   clear: both
 
+.smaller
+  color: #888
+  font-weight: 200
+  font-size: 1.4rem
+
+
 ol.nice_list
   width: 100%
   counter-reset: item
@@ -104,10 +110,6 @@ ol.nice_list
     font-size: 1.6rem
     font-weight: 400
     display: block
-  .smaller
-    color: #888
-    font-weight: 200
-    font-size: 1.4rem
   li
     clear: both
     display: block
@@ -158,7 +160,7 @@ h3, p.lead
 #footer
   margin-top: 5rem
 
-.deadline
+.deadline, .subgoal-box .owner
   font-size: 1.25rem
 
 // for now, override GOV.UK colors
