--- a/app/views/goals/_goal.html.slim
+++ b/app/views/goals/_goal.html.slim
@@ -4,6 +4,7 @@ div class="col-sm-#{12/cols} subgoal-box"
   p =link_to goal.name, goal
   /.tiny_status.pull-right ON TRACK
   -if goal.owner
-    .hint =goal.owner.name
+    .owner =goal.owner.name
+  .smaller =pluralize(goal.children.count,"Subgoal") unless goal.children.empty?
 -if((goal_counter+1) % cols == 0)
   .row
