--- a/app/views/scores/_form.html.slim
+++ b/app/views/scores/_form.html.slim
@@ -15,7 +15,7 @@
       = f.label "Key Result", class: "col-sm-2 control-label"
       .col-sm-10
         h2 style="margin-top: 0" = @score.goal.name
-  .form-group
+  /.form-group
     = f.label :amount, class: "col-sm-2 control-label"
     .col-sm-10
       = f.text_field :amount, class: "form-control bignum", style: "display:inline"
