--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -6,7 +6,7 @@
       .col-sm-9
         h1 = @goal.name
         - if (@goal.children.count == 0)
-          h2 Delivery status
+          h2 Latest report
           - if can_modify? @goal
             =link_to "Report progress", new_goal_score_path(@goal), :class=>"button", :style=>"margin-bottom: 2rem"
           - if(@goal.scores.empty?)
@@ -17,7 +17,7 @@
             - @goal.scores.each do |score|
               .row
                 .col-sm-3.sub_score
-                  h2.amount = score.display_amount
+                  //h2.amount = score.display_amount
                   .date =score.display_date
                 .col-sm-9
                   p =score.reason
@@ -25,7 +25,7 @@
                     small By #{score.user.name}
                   p =link_to :Edit, edit_score_path(score) if is_admin?
         - unless @goal.children.empty?
-          h2 Sub Goals
+          h2 Sub-goals
           - if @goal.children.count > 5
             .alert.alert-warning.alert-dismissable
               strong> NOTE:
