allow status to be reported at every level. Add support for showing SDP goals. A few UI tweaks.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -38,6 +38,14 @@
 @import 'elements/phase-banner'
 @import 'elements/components'
 
+
+.related
+  border-top: 10px solid $govuk-blue
+  h3
+    margin-top: 0.3em
+    line-height: 1.25
+    margin-bottom: 0.5em
+
 .account_info
   font-size: 16px
   margin-bottom: 0.5rem
@@ -140,14 +148,13 @@ ul.biglist
   li
     font-size: 1.5rem
 
-.padded-row
-  margin-top: 5rem
-
 body
   padding-top: 0 !important
 
 h1
   @extend .heading-xlarge
+  padding-top: 7px
+  margin-top: 0
 
 h2
   @extend .heading-large
