--- a/app/views/scores/edit.html.slim
+++ b/app/views/scores/edit.html.slim
@@ -1,9 +1,4 @@
-.page-header
-  = link_to @score.goal, class: 'btn btn-default' do
-    span.glyphicon.glyphicon-list-alt
-    |  Back
-  = link_to 'Destroy', @score, method: :delete, data: { confirm: 'Are you sure? This cannot be undone.' }, class: "btn btn-danger"
-  h1 Editing Score
+h1 Edit a score
 
 .row
   .col-sm-2
