--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -9,6 +9,10 @@
         span.summary Where did these goals come from?
       .panel.panel-border-wide These goals and milestones have been developed with the group project management offices (PMOs) using the latest business plans. Are they still right? We need your help to ensure they reflect what we're really doing (and have done). Please give feedback to your group PMO. #{link_to "Learn more.",about_path, :class=>'noprint'}
     .page-break
+  .col-sm-4
+    aside.related
+      h3 Single Departmental Plan
+      = link_to "View SDP goals", sdp_goals_path
 .row
   .col-sm-8
     h2 Vision
