--- a/app/views/scores/_form.html.slim
+++ b/app/views/scores/_form.html.slim
@@ -26,12 +26,11 @@
     = f.label :Narrative, class: "col-sm-2 control-label"
     .col-sm-10
       = f.text_area :reason, class: "form-control bigtext"
-      .form-hint Why do you feel the score you've given this goal is appropriate right now?
+      .form-hint Please highlight any major achievements, setbacks, risks, or issues.
 
       =f.hidden_field :goal_id, :value=>@score.goal.id
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.submit class: "button"
-
       .cancel
         =link_to :Back, goal_path(@score.goal)
