--- a/app/views/scores/_form.html.slim
+++ b/app/views/scores/_form.html.slim
@@ -23,6 +23,23 @@
       br
       .form-hint An integer to represent how well this goal is being met. For example, 50 if you're half-way to completion.
   .form-group
+    = f.label :status, class: "col-sm-2 control-label"
+    .col-sm-10
+      fieldset.inline
+        /legend.visuallyhidden Please select a status
+        - Score.statuses.keys.map do |key,value|
+          label.block-label for="radio-inline-#{key}" class="#{key}"
+            /=f.radio_button :goal_status, key %>
+            -if (@score.status == key)
+              input id="radio-inline-#{key}" type="radio" name="score[status]" value="#{key}" checked="checked" #{key.humanize.capitalize}
+            -else
+              input id="radio-inline-#{key}" type="radio" name="score[status]" value="#{key}" #{key.humanize.capitalize}
+
+
+      .form-hint The owner is responsible for making progress updates against this goal.
+      .form-hint Please indicate how this goal is progressing. If you are indicating that the goal is off-track, please ensure you provide detail in the narrative below.
+
+  .form-group
     = f.label :Narrative, class: "col-sm-2 control-label"
     .col-sm-10
       = f.text_area :reason, class: "form-control bigtext"
