--- a/app/views/goals/_goal.html.slim
+++ b/app/views/goals/_goal.html.slim
@@ -8,6 +8,7 @@ div class="col-sm-#{12/cols} subgoal-box"
   /.tiny_status.pull-right ON TRACK
   -if goal.owner
     .owner =goal.owner.name
+  .owner Due: #{goal.latest_end_date.strftime("%h %Y")}
   .smaller =pluralize(goal.children.count,"Subgoal") unless goal.children.empty?
 -if((goal_counter+1) % cols == 0)
   .row
