--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -35,7 +35,7 @@ javascript:
       .col-sm-10
         = f.date_select :start_date, discard_day: true
     .form-group
-      = f.label "End date (deadline)", class: "col-sm-2 control-label"
+      = f.label "Due date", class: "col-sm-2 control-label"
       .col-sm-10
         = f.date_select :deadline, discard_day: true
     .form-group
