--- a/app/assets/stylesheets/goals.sass
+++ b/app/assets/stylesheets/goals.sass
@@ -8,12 +8,13 @@
 
 .tiny_status
   color: #FFF
-  padding: 3px 4px
-  margin: 3px
   text-align: center
+  font-size: 14px
+  width: 100%
+  margin-top: 6px
   div
     color: #fff
-    padding: 3px 8px
+    padding: 5px 8px 3px 8px
 
 .big_status
   color: #fff
