--- a/app/views/teams/show.html.slim
+++ b/app/views/teams/show.html.slim
@@ -2,7 +2,7 @@
   .col-md-12
     /h3 =link_to :Teams, teams_path
     h3 =link_to "Groups and Teams", groups_path
-    h1.heading-xlarge = @team.name
+    h1 style="margin-bottom: 1rem" = @team.name
     -if @team.group
       smaller
         'Part of the
