print style tweaks.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -66,16 +66,6 @@
   a::after
     content: none !important
 
-  .signage
-    h1
-      font-size: 12rem
-    h2, p.lead
-      font-size: 3rem
-    p
-      font-size: 3rem
-    h3
-      margin-top: 4rem
-
   .page-break
     page-break-before: always
 
@@ -261,6 +251,8 @@ h2.score
   h3
     padding-right: 1rem
     font-size: 3rem
+    display: block
+    margin-top: 3px
   p
     display: block
     margin: 15px 0 10px 0
