--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -19,11 +19,10 @@
       b We want to help departments work together to transform government to meet user needs.
     /Previously:
     /Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
-.row.padded-row.vision
+.row.vision
   .col-sm-8
     h2 To achieve this vision we will
     ol.list.list-number
-      li Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
       li Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
       li Create, run and continuously improve the platforms and tools that make it simple for government to build, iterate and retire services.
       li Lead the digital, data and technology function so that government has the skills and capability it needs to transform itself.
