--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -51,12 +51,14 @@ javascript:
     = f.label :Owner, class: "col-sm-2 control-label"
     .col-sm-10
       =collection_select :goal, :user_id, User.all, :id, :name, {prompt:true, include_blank:true}, {class: :selectpicker}
+      ' &nbsp;
+      =link_to "Assign to me", "javascript: $('#goal_user_id').selectpicker('val', '#{current_user.id}');void(0);"
       .form-hint The owner is responsible for making progress updates against this goal.
   -if is_admin?
     .form-group
       = f.label :sdp, "In the SDP?", class: "col-sm-2 control-label"
       .col-sm-10
-        = f.check_box :sdp, class: "form-control"
+        = f.check_box :sdp, class: "form-control"        
         .form-hint Is this goal referenced in the Single Departmental Plan?
   //parent set in controller if ID passed in params (assuming parent is found)
   /nope. just print parent above and make parent_id a hidden var
