--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,8 @@
   = stylesheet_link_tag "application", media: :all
 - content_for :page_title do
   | GDS Goals
+- content_for :inside_header do
+end
 - content_for :header_class do
   | with-proposition
 - content_for :proposition_header do
