--- a/app/views/goals/_goal.html.slim
+++ b/app/views/goals/_goal.html.slim
@@ -10,6 +10,7 @@ div class="col-sm-#{12/cols} subgoal-box"
       p =link_to goal.name, goal
       -if goal.owner
         .owner =goal.owner.name
+      .owner #{goal.score.nil? ? "<span style='color:#900'>Never updated</span>".html_safe : "Updated " + time_ago_in_words(goal.score.created_at).humanize + " ago"}
       .owner Due: #{goal.latest_end_date.strftime("%h %Y")}
       .smaller =pluralize(goal.children.count,"Subgoal") unless goal.children.empty?
     /.tiny_status.pull-right ON TRACK
